@@ -1,3 +1,8 @@
+Console-2.0.2-beta
+=============================================================
+- Renew appearance;
+- Two variants of result (formated and raw)
+
 Console-2.0.1-beta
 =============================================================
 - Saving code in $_SESSION;
